# url_shortener

./: app.py  db.py  pyproject.toml
migrations/: env.py
migrations/versions/: b0bcd1eb5570_create_url_model.py
shortener/: models.py
shortener/utils/: short_link.py
test/: test_short_link.py
utils/: short_link.py
