[tool.poetry]
name = "flask-test"
version = "0.1.0"
description = "flask tutorial"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "*"


[tool.poetry.group.dev.dependencies]
pytest-watcher = "^0.4.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
