[tool.poetry]
name = "flask-test"
version = "0.1.0"
description = "flask tutorial"
authors = ["me"]
packages = [{include = "shortener"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "*"
sqlalchemy = "^2.0.30"
flask-migrate = "^4.0.7"
flask-sqlalchemy = "^3.1.1"


[tool.poetry.group.dev.dependencies]
pytest-watcher = "^0.4.2"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
